2008-06-20  Angelo Graziosi  <angelo.graziosi@alice.it>  (tiny change)

	* sysdep.c (cfmakeraw): Provide fallback implementation.
	(serial_configure): Provide fallback implementation of cfsetspeed.

2008-06-20  Kenichi Handa  <handa@m17n.org>

	* xftfont.c (xftfont_open): Add FOUNDRY, SPACING, DPI, SCALABLE to
	the pattern.

	* fontset.c (fontset_from_font): Copy font_spec before changing
	the elements.

	* xfns.c (x_default_font_parameter): Try "monospace-12" too.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* w32fns.c, xfnc.c (x_default_font_parameter): Only set `font-param'
	for explicit `font' parameters.

	* frame.c (x_set_font): Remove unexplained call to fix inf-recursion.

2008-06-19  Kenichi Handa  <handa@m17n.org>

	* frame.c: Include <ctype.h>.
	(x_set_font_backend): Allow spacing characters in the X resource
	for FontBackend.

2008-06-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* w32fns.c, xfns.c (Qfont_param): New var.
	(syms_of_w32fns): Initialize it.
	(x_default_font_parameter): Record explicit `font' into
	`font-parameter'.

2008-06-18  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_xlfd): Fix previous change.
	(font_parse_fcname): Don't use :fc-unknown-spec.
	(FRAME_X_DISPLAY_INFO): Besure to have at least 1 pixel height.
	(Fcopy_font_spec): Preserve the order of elements in FONT_EXTRA.
	(font_add_log): Prepend the driver name to the resulting fonts.

	* ftfont.c (ftfont_pattern_entity): New arg extra.  Caller changed.
	(ftfont_spec_pattern): Don't check QCfc_unknown_spec and QCname.
	(ftfont_list) [FC_FONTFORMAT]: Include FC_FONTFORMAT in objset.

	* xftfont.c (QChinting , QCautohint, QChintstyle, QCrgba)
	(QCembolden): New variables.
	(syms_of_xftfont): DEFSYM them.
	(xftfont_open): Call XftFontMatch.  Don't trust the result of
	XftTextExtents8 if the pixel_size is less than 5.

2008-06-18  Andreas Schwab  <schwab@suse.de>

	* font.c (Ffont_face_attributes): Only define if
	HAVE_WINDOW_SYSTEM.